Convert app to es6 modules.

--- a/deskswap.html
+++ b/deskswap.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<div id="container"></div>
-		<script src="/js/deskswap.js" type="text/javascript"></script>
+		<script src="/js/deskswap.js" type="module"></script>
 	</body>
 </html>
